Changes in @NEW@:
  o Client Changes:
    * Added "cvc set" command to change files between binary and text mode.
    * "cvc add" no longer assumes files it doesn't know to be binary are text
      files; there are lists for both binary and text types, and files which are
      added which aren't in either list need to be added with "--text" or
      "--binary"

Changes in 1.0.30:
  o System Update Changes:
    These changes make Conary much more robust when applying updates
    that move files from one package to another.

    * Components that modify the same files are now required to be in
      the same update job.  For example, if a file moves from
      component a:runtime to component b:runtime, the erase of
      component a:runtime and the install of component b:runtime will
      occur at the same time. (CNY-758).
    * Files moving between components as part of a single job are now
      treated as file updates instead of separate add/remove events.
      (CNY-750, CNY-786, CNY-359)

  o Client Changes:
    * The source component is now displayed in "conary rq --info"
      output.
    * Entitlements can now be passed into ConaryClient and
      NetworkRepositoryClient objects directly. (CNY-640)
    * Exceptions raised in callback functions are now issued as
      warnings and the current job is finished before
      existing. KeyboardInterrupts and SystemExits are handled
      immediately. (CNY-806)
    * The "--debug" command line flag now provides information that is
      useful to the end-user during the update process.  The
      "--debug=all" flag will provide output that is useful to conary
      developers.
    * The output of "--debug" has been modified when performing
      dependency resolution.  The output should be more helpful to end
      users.  Also rearranged the output given when dependencies
      fail. (CNY-779)
    * Config files and diffs are no longer cached in ram during installs;